<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorBackground"
    android:orientation="vertical"
    android:padding="10dp">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <Space
                android:layout_width="match_parent"
                android:layout_height="20dp"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/new_entry_bites_seima"
                android:textColor="@color/colorText"
                android:textSize="20dp" />

            <EditText
                android:id="@+id/seimosNr"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="number" />

            <Space
                android:layout_width="match_parent"
                android:layout_height="20dp"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/new_entry_pletimas"
                android:textColor="@color/colorText"
                android:textSize="20dp" />

            <CheckBox
                android:id="@+id/checkPletimasReikia"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/new_entry_pletimas_Reikia" />

            <CheckBox
                android:id="@+id/checkPletimasBaigta"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/new_entry_pletimas_Baigta" />

            <CheckBox
                android:id="@+id/checkPletimasNereikia"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/new_entry_pletimas_Nereikia" />

            <CheckBox
                android:id="@+id/checkPletimasSiaurinti"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/new_entry_pletimas_Siaurinti" />

            <Space
                android:layout_width="match_parent"
                android:layout_height="20dp"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/new_entry_bites_Motinele"
                android:textColor="@color/colorText"
                android:textSize="20dp" />

            <RadioGroup
                android:id="@+id/new_entry_bites_motinele"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:weightSum="3">

                <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/new_entry_bites_Motinele_yra" />

                <RadioButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/new_entry_bites_Motinele_gal_nera" />

                <RadioButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/new_entry_bites_Motinele_nera" />

            </RadioGroup>

            <Space
                android:layout_width="match_parent"
                android:layout_height="20dp"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/new_entry_bites_medus"
                android:textColor="@color/colorText"
                android:textSize="20dp" />

            <CheckBox
                android:id="@+id/checkMedusMeduve"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/new_entry_bites_medus_deti_meduve" />

            <CheckBox
                android:id="@+id/checkMedusBeveik"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/new_entry_bites_medus_yra" />
            <CheckBox
                android:id="@+id/checkMedusJau"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/new_entry_bites_medus_yra_daug" />
            <CheckBox
                android:id="@+id/checkMedusReikiaMeduviu"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/new_entry_bites_medus_pleciam" />
            <CheckBox
                android:id="@+id/checkMedusNera"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/new_entry_bites_medus_nera" />
            <Space
                android:layout_width="match_parent"
                android:layout_height="20dp"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/new_entry_komentaras"
                android:textColor="@color/colorText"
                android:textSize="20dp" />

            <EditText
                android:id="@+id/new_entry_bites_komentaras"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textLongMessage" />

            <Space
                android:layout_width="match_parent"
                android:layout_height="20dp"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:weightSum="3">

                <Button
                    android:id="@+id/btn_create"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="@color/colorGreen"
                    android:text="@string/new_entry_insert" />

                <Button
                    android:id="@+id/btn_update"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="@color/colorYellow"
                    android:text="@string/new_entry_update" />

                <Button
                    android:id="@+id/btn_delete"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="@color/colorRed"
                    android:text="@string/new_entry_delete" />

            </LinearLayout>

        </LinearLayout>
    </ScrollView>
</LinearLayout>
