<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorBackground"
    android:orientation="vertical"
    android:padding="10dp">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/app_title"
        android:textAlignment="center"
        android:textAllCaps="true"
        android:textColor="@color/colorText"
        android:textSize="25dp"
        android:textStyle="bold"
        android:gravity="center_horizontal" />

        <ImageView
            android:id="@+id/myimg"
            android:layout_width="311dp"
            android:layout_height="145dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginVertical="50dp"
            android:background="@drawable/logo"
            android:scaleType="fitXY" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/login_username"
        android:textColor="@color/colorText"
        android:textSize="20dp" />

    <EditText
        android:id="@+id/username"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/login_password"
        android:textColor="@color/colorText"
        android:textSize="20dp" />

    <EditText
        android:id="@+id/password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPassword" />

    <CheckBox
        android:id="@+id/remember_me"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/login_remember_me" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="10dp"
        android:weightSum="2">

        <Button
            android:id="@+id/login_btn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginRight="5dp"
            android:layout_marginVertical="40dp"
            android:layout_weight="1"
            android:background="@color/colorGreen"
            android:text="@string/login_login_btn" />

        <Button
            android:id="@+id/register_btn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginVertical="40dp"
            android:layout_weight="1"
            android:background="@color/colorAccent"
            android:text="@string/login_register_btn" />
    </LinearLayout>

</LinearLayout>