<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorBackground"
    android:orientation="vertical">


    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:padding="40dp"
        android:text="@string/app_title"
        android:textAlignment="center"
        android:textAllCaps="true"
        android:textColor="@color/colorText"
        android:textSize="30dp"
        android:textStyle="bold" />

    <TextView

        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/register_name"
        android:textColor="@color/colorText"
        android:textSize="20dp" />

    <EditText
        android:id="@+id/name1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <TextView

        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/register_email"
        android:textColor="@color/colorText"
        android:textSize="20dp" />

    <EditText
        android:id="@+id/email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/register_password"
        android:textColor="@color/colorText"
        android:textSize="20dp" />

    <EditText

        android:id="@+id/password1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPassword" />


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="10dp"
        android:weightSum="2">

        <Button
            android:id="@+id/register_btn1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginVertical="40dp"
            android:layout_weight="1"
            android:background="@color/colorGreen"
            android:text="@string/register_register_btn" />
    </LinearLayout>


</LinearLayout>